# Project-Onyx-Quadruped

./: .gitignore  README.md
CAD Designs/: Onyx-Quadruped.lnk
CAD Designs/3DCNC Design/: Thumbs.db
CAD Designs/3DCNC Design/InventorModels/Assemblies/: LegAssemblyLeftRear.iam  OnxyLegSpecs.idw
CAD Designs/3DCNC Design/InventorModels/Plastics/: KneeUpgradeMk3.1.ipt  KneeUpgradeMk3.1.stl  RearCarriageCarrierPlate.ipt  RearCarriageSupport.ipt
CAD Designs/Legacy/InventorModels/Assemblies/: FXL_HipServo_MIR.iam  Knee_LeftRear_MIR.iam  OnyxBody.iam  OnyxBody.idw  OnyxQuadruped-1.idw  OnyxQuadruped.idw
CAD Designs/Legacy/InventorModels/Electronics/: ssc-32.ipt
CAD Designs/Legacy/InventorModels/Plastics/: KneeUpgradeExperimentalMk3.stl  KneeUpgradeMk3.1Blank_HornRight.ipt  KneeUpgradeMk5Blank.stl
CAD Designs/Legacy/SolidWorksModels/MetalBrackets/: asb-15.sldprt
CAD Designs/Onyx Quadruped/InventorModels/Assemblies/: FXL_HipServo.iam  FXR_HipServo.iam  LegAssemblyLeftRear.idw  LegAssemblyLeftRear_MIR.iam  LegAssemblyRightFront.iam
CAD Designs/Onyx Quadruped/InventorModels/OldVersions/: OnyxBody.0006.iam
CAD Designs/Onyx Quadruped/InventorModels/Plastics/: KneeUpgradeExperimental.ipt  KneeUpgradeMk3.1Blank.ipt  KneeUpgradeMk3.1Blank_MIR.ipt  KneeUpgradeMk5.stl  KneeUpgradeMk5Blank.ipt  MicroUSBClip.ipt  OnxyBelly.stl  QuadrupedFoot.ipt
CAD Designs/Onyx Quadruped/SolidWorksModels/MetalBrackets/: asb-12.sldprt
Custom Servo Controller/: Adafruit 16-Channel 12-bit PWM-Servo Driver - I2C interface [PCA9685] ID- 815 - $14.95 - Adafruit Industries, Unique & fun DIY electronics and kits.url
Custom Servo Controller/Adafruit-PWM-Servo-Driver-Library-master/: Adafruit_PWMServoDriver.cpp  Adafruit_PWMServoDriver.h
Custom Servo Controller/ISC16 - Old/: ISC16.cpp  ISC16.h
Custom Servo Controller/ISC16 - Old/examples/ISC16/: ISC16.ino
Custom Servo Controller/SSC32-2.02/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.TXT-LYNXMOTION  aclocal.m4  config.h.in  configure  configure.ac  gccasm.pl
Custom Servo Controller/SSC32-2.02/nbproject/: configurations.xml  project.xml
Custom Servo Controller/SSC32-2.02/nbproject/private/: configurations.xml  private.xml
Custom Servo Controller/SSC32-2.02/src/: Makefile.am  Makefile.in  abcd.c  abcd.h  appdefs.h  cmdproc.c  cmdproc.h  compiler.h  eeprom.c  eeprom.h  globals.c  globals.h  gpseq.c  gpseq.h  hexapod.c  hexapod.h  ldscript.m168  numtypes.h  pulsedge.c  pulsedge.gccasm.c  pulsedge.h  regrw.c  regrw.h  serial.c  serial.gccasm.c  serial.h  ssc32.c  ssc32.prj
Custom Servo Controller/avr-loader-0.1/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac
Custom Servo Controller/avr-loader-0.1/headers/.svn/: entries
Custom Servo Controller/avr-loader-0.1/nbproject/: configurations.xml  project.xml
Custom Servo Controller/avr-loader-0.1/nbproject/private/: configurations.xml
Custom Servo Controller/avr-loader-0.1/src/: Makefile.am  Makefile.in  bootldr168.asm  bootldr168.txt  bootldr8.asm  bootldr8.txt
Custom Servo Controller/avr-loader-0.1/util/: Makefile.am  Makefile.in  hex2abl.c
Documentation/: Robot_Arm_Designer.xls  SSC-32 Binary Commands.url  SSC-32 Manual.url  SSC-32 Sequencer.url  Thumbs.db
Local-Only/3DCNC Design/InventorModels/Assemblies/: FXR_HipServo_MIR (2).iam  Foot (2).iam  Foot_MIR (2).iam  Knee_LeftRear.iam  Knee_RightFront (2).iam  OnyxQuadruped (2).iam
Local-Only/3DCNC Design/InventorModels/Plastics/: KneeUpgradeExperimental (2).stl  KneeUpgradeExperimentalMk2 (2).stl  KneeUpgradeExperimentalMk3.ipt  KneeUpgradeMk3.1Blank (2).stl  KneeUpgradeMk3.1Blank.ipt  KneeUpgradeMk5 (2).ipt  MicroUSBClip.stl  OnxyBelly.ipt  OnyxMK5Test.stl  QuadrupedFoot_MIR.ipt  RearCarriageCarrierPlate (2).stl  RearCarriageSupport.stl
Local-Only/3DCNC Design/SolidWorksModels/MetalBrackets/: asb-04.sldprt  asb-06.sldprt  asb-11.sldprt
Local-Only/3DCNC Design/SolidWorksModels/servo/: Thumbs (2).db
Robotic_Arm/: Arm.cpp  Arm.h  Robotic_Arm.ino  SSC32.cpp  sketch.cfg
code/: Thumbs.db
code/HostControllerFirmware/Onyx-HostFirmware-7-18-15/: sketch.cfg
code/HostControllerFirmware/Onyx-HostFirmware-7-19-15/: Onyx-HostFirmware-7-19-15.ino
code/HostControllerFirmware/Onyx-HostFirmware-7-2-15/: Onyx-HostFirmware-7-2-15.ino  config.h
code/HostControllerFirmware/Onyx-HostFirmware-7-24-15 - Copy/: .cproject  .project
code/HostControllerFirmware/Onyx-HostFirmware-ClassRestructure-7-19-15/: Onyx-HostFirmware-ClassRestructure-7-19-15.ino  sketch.cfg
code/HostControllerFirmware/Onyx-HostFirmware-Initial-7-18-15/: Onyx-HostFirmware-Initial-7-18-15.ino  reference.txt  sketch.cfg
code/HostControllerFirmware/Onyx-HostFirmware-Initial-7-2-15/: Onyx-HostFirmware-Initial-7-2-15.ino  config.h  reference.txt  sketch.cfg
code/examples/6.3.2015/: 6.3.2015 (2).pde
code/examples/Onyx-61015-More/: Onyx-61015-More (2).ino
code/examples/Onyx-HostFirmware-Initial-7-2-15/: Onyx-HostFirmware-Initial-7-2-15 (2).ino  sketch.cfg
code/examples/OnyxGitHub-61015/: OnyxGitHub-61015.ino
code/examples/OnyxGitHub-61615/: OnyxGitHub-61615.ino  sketch.cfg
code/examples/OnyxGitHub-63015/: sketch.cfg
code/libraries/1-Initialize/: Initialize.cpp  Initialize.h  Template.h  Template.library.cpp  keywords.txt
code/libraries/1-StateControl/: Template.h
code/libraries/Initialize/: Initialize.cpp  Initialize.h
code/libraries/SSC32/: SSC32 (2).cpp  SSC32.cpp  SSC32.h  keywords.txt
code/libraries/onyxIK/: onyxIK.h
code/libraries/onyxIdle/: onyxIdle.cpp
code/libraries/onyxSense/: onyxSense.h
code/reference/OnyxGitHub-61015/: OnyxGitHub-61015.ino
code/reference/OnyxGitHub-63015/: OnyxGitHub-63015.ino
(+361 files in other folders)
